--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     </p>
 
     <footer>
-      <a href="homepage.html" class="homepage-link"> Homepage</a>
+      <a href="index.html" class="homepage-link"> Homepage</a>
 
       <a href="photo.html" class="photo-link"> Photo</a>
 
