--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       dough. Croissants are named for their historical crescent shape.
     </p>
     <footer>
-      <a href="homepage.html" class="homepage-link"> Homepage</a>
+      <a href="index.html" class="homepage-link"> Homepage</a>
 
       <a href="photo.html" class="photo-link"> Photo</a>
 
