--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,7 @@
     <br />
 
     <footer>
-      <a href="homepage.html" class="homepage-link"> Homepage </a>
+      <a href="index.html" class="homepage-link"> Homepage </a>
       <a href="photo.html" class="photo-link"> Photo</a>
       <a href="contact.html" class="contact-link"> Contact</a>
     </footer>
