--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Contact 🥐</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The best Croissant at croissant.com" />
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Contact 🥐</title>
