--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Origins of the croissant- croissant.com</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Description of the Croissant" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Croissant Homepage</title>
   </head>
