--- a/photo.html
+++ b/photo.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Picture of the Croissant - croissant.com</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="image of the croissant" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Picture 🥐</title>
   </head>
@@ -11,7 +12,7 @@
 
     <img
       src="https://media.istockphoto.com/id/178462137/photo/croissant-isolated-on-white.jpg?s=612x612&w=0&k=20&c=jDNGlWLbufaPJuAxs5FH0-yyOC8SoPSwSE9FQKjGwJQ="
-      alt=""
+      alt="croissant-picture"
     />
 
     <br />
