--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Origins of the croissant- croissant.com</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Description of the Croissant" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Croissant Homepage</title>
+    <meta name="description" content="Homepage- croissant.com" />
   </head>
   <body>
     <h1>🥐Croissant</h1>
