--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,7 @@
     <meta name="description" content="image of the croissant" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Picture 🥐</title>
+    <meta name="description" content="image of the croissant" />
   </head>
   <body>
     <h1>A picture of a Croissant 🥐</h1>
