--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>Contact 🥐</title>
+    <meta name="description" content="Contact us page - croissant.com" />
   </head>
   <body>
     <h1>Contact us 🥐</h1>
@@ -18,11 +19,13 @@
     </p>
 
     <footer>
-      <a href="index.html" class="homepage-link"> Homepage</a>
+      <a href="index.html" title="Homepage" class="homepage-link"> Homepage</a>
 
-      <a href="photo.html" class="photo-link"> Photo</a>
+      <a href="photo.html" title="Croissant Photo" class="photo-link"> Photo</a>
 
-      <a href="contact.html" class="contact-link"> Contact</a>
+      <a href="contact.html" title="Contact croissant.com" class="contact-link">
+        Contact</a
+      >
     </footer>
   </body>
 </html>
