--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       dough. Croissants are named for their historical crescent shape.
     </p>
     <footer>
-      <a href="index.html" class="homepage-link"> Homepage</a>
+      <a href="index.html" title="Homepage" class="homepage-link"> Homepage</a>
 
-      <a href="photo.html" class="photo-link"> Photo</a>
+      <a href="photo.html" title="Croissant Photo" class="photo-link"> Photo</a>
 
-      <a href="contact.html" class="contact-link"> Contact</a>
+      <a href="contact.html" title="Contact croissant.com" class="contact-link">
+        Contact</a
+      >
     </footer>
   </body>
 </html>
