--- a/photo.html
+++ b/photo.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Picture of the Croissant - croissant.com</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="image of the croissant" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <title>Picture 🥐</title>
+    <title>Picture of the Croissant - croissant.com</title>
     <meta name="description" content="image of the croissant" />
   </head>
   <body>
@@ -19,9 +18,11 @@
     <br />
 
     <footer>
-      <a href="index.html" class="homepage-link"> Homepage </a>
-      <a href="photo.html" class="photo-link"> Photo</a>
-      <a href="contact.html" class="contact-link"> Contact</a>
+      <a href="index.html" title="Homepage" class="homepage-link"> Homepage </a>
+      <a href="photo.html" title="Croissant Photo" class="photo-link"> Photo</a>
+      <a href="contact.html" title="Contact croissant.com" class="contact-link">
+        Contact</a
+      >
     </footer>
   </body>
 </html>
